add notes on each notbooks and readme setup

--- a/notebook/Label_preparation.ipynb
+++ b/notebook/Label_preparation.ipynb
@@ -2,6 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "025593ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "This notebook prepares scraped Telegram message data for Named Entity Recognition (NER).\n",
+    "\n",
+    "Steps covered:\n",
+    "1. Load preprocessed message CSV\n",
+    "2. Clean Amharic text (remove emojis, punctuation, normalize whitespace)\n",
+    "3. Tokenize sentences into words\n",
+    "4. Add metadata (message ID and timestamp)\n",
+    "5. Output the cleaned data to a new CSV file"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "75859ed7-a0fd-43c5-95c3-b4976b8120e9",
    "metadata": {},
@@ -9,6 +27,18 @@
    "source": [
     "import re\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c35be11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Step 1: Load raw Telegram scraped data ---\n",
+    "# Load cleaned message text from earlier ingestion/preprocessing phase\n",
+    "# 'message_id' is assumed to be a unique identifier per Telegram message"
    ]
   },
   {
