--- a/notebook/channel_scraper.ipynb
+++ b/notebook/channel_scraper.ipynb
@@ -2,6 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "994df3b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "This script connects to Telegram via the Telethon API, logs into the user's Telegram session,\n",
+    "and scrapes messages from a list of predefined Telegram channels. It extracts relevant fields\n",
+    "such as:\n",
+    "\n",
+    "- Channel title\n",
+    "- Channel username\n",
+    "- Message ID\n",
+    "- Full message text\n",
+    "- Message date\n",
+    "- Media file path (for image posts)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "id": "4e6f4c95-5a17-4361-b1a4-a70425907d1c",
    "metadata": {},
